safari img stretch fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,8 +17,15 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-body{
+
+body {
   font-family: 'Quicksand', sans-serif;
+}
+
+.maxFit {
+  /* -wmax-width: fit-content; */
+  -webkit-max-width: fit-content;
+  max-width: fit-content;
 }
 
 .my-masonry-grid {
@@ -52,6 +59,7 @@ body{
   transform: translate(-50%, -50%);
   visibility: hidden;
 }
+
 /* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
